feat: Allow select ParadigmManager, delete profile.